fix: add text-align justify property

--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ body {
     color: #666d89;
     background-color: #f2f2f2;
     border-bottom: 6px solid #fff;
+    text-align: justify;
 }
 .services .wrapper {
     height: 464px;
@@ -279,6 +280,7 @@ body {
     color: #636983;
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
+    text-align: justify;
 }
 .portfolio .wrapper {
     position: relative;
@@ -347,6 +349,7 @@ body {
     color: #666d89;
     background-color: #f2f2f2;
     border-bottom: 6px solid #fff;
+    text-align: justify;
 }
 .about-us .wrapper {
     width: 960px;
@@ -515,6 +518,7 @@ body {
     color: #f0d8d9;
     background-color: #f06c64;
     border-bottom: 6px solid #ea676b;
+    text-align: justify;
 }
 .get-a-quote .wrapper{
     height: 618px;
